// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/shareBoard/shareBoard return shareBoard and click Copy link 1`] = `
<div>
  <div
    class="Dialog dialog-back ShareBoardDialog"
  >
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <button
            aria-label="Close dialog"
            title="Close dialog"
            type="button"
          >
            <i
              class="CompassIcon icon-close CloseIcon"
            />
          </button>
          <div
            class="cardToolbar"
          >
            <span
              class="text-heading5"
            >
              Share Board
            </span>
          </div>
        </div>
        <div
          class="share-input__container"
        >
          <div
            class="share-input"
          >
            <i
              class="CompassIcon icon-magnify MagnifyIcon"
            />
            <div
              class="userSearchInput css-2b097c-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1wmrr75-Control"
              >
                <div
                  class=" css-kpfmlq-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-1shkodo-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-4-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-byrije-loadingIndicator"
                  >
                    <span
                      class="css-1yvy2vo-LoadingDot"
                    />
                    <span
                      class="css-zoievk-LoadingDot"
                    />
                    <span
                      class="css-x748d8-LoadingDot"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="user-items"
        >
          <div
            class="user-item"
          >
            <div
              class="user-item__content"
            >
              <i
                class="CompassIcon icon-mattermost user-item__img"
              />
              <div
                class="ml-3"
              >
                <strong>
                  Everyone at Test Team Team
                </strong>
              </div>
            </div>
            <div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="user-item__button"
                >
                  None
                  <i
                    class="CompassIcon icon-chevron-down CompassIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tabs-container"
        >
          <button
            class="tab-item tab-item--active"
          >
            Share
          </button>
          <button
            class="tab-item false"
          >
            Publish
          </button>
        </div>
        <div
          class="tabs-content"
        >
          <div>
            <div
              class="d-flex justify-content-between"
            >
              <div
                class="d-flex flex-column"
              >
                <div
                  class="text-heading2"
                >
                  Share internally
                </div>
                <div
                  class="text-light"
                >
                  Users who have permissions will be able to use this link
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between tabs-inputs"
          >
            <div
              class="d-flex input-container"
            >
              <a
                class="shareUrl"
                href="http://localhost/1/1"
                rel="noreferrer"
                target="_blank"
              >
                http://localhost/1/1
              </a>
            </div>
            <button
              title="Copy internal link"
              type="button"
            >
              <i
                class="CompassIcon icon-content-copy CompassIcon"
              />
              <span>
                Copy link
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoard/shareBoard return shareBoard and click Copy link 2`] = `
<div>
  <div
    class="Dialog dialog-back ShareBoardDialog"
  >
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <button
            aria-label="Close dialog"
            title="Close dialog"
            type="button"
          >
            <i
              class="CompassIcon icon-close CloseIcon"
            />
          </button>
          <div
            class="cardToolbar"
          >
            <span
              class="text-heading5"
            >
              Share Board
            </span>
          </div>
        </div>
        <div
          class="share-input__container"
        >
          <div
            class="share-input"
          >
            <i
              class="CompassIcon icon-magnify MagnifyIcon"
            />
            <div
              class="userSearchInput css-2b097c-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1wmrr75-Control"
              >
                <div
                  class=" css-kpfmlq-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-1shkodo-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-4-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-byrije-loadingIndicator"
                  >
                    <span
                      class="css-1yvy2vo-LoadingDot"
                    />
                    <span
                      class="css-zoievk-LoadingDot"
                    />
                    <span
                      class="css-x748d8-LoadingDot"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="user-items"
        >
          <div
            class="user-item"
          >
            <div
              class="user-item__content"
            >
              <i
                class="CompassIcon icon-mattermost user-item__img"
              />
              <div
                class="ml-3"
              >
                <strong>
                  Everyone at Test Team Team
                </strong>
              </div>
            </div>
            <div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="user-item__button"
                >
                  None
                  <i
                    class="CompassIcon icon-chevron-down CompassIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tabs-container"
        >
          <button
            class="tab-item tab-item--active"
          >
            Share
          </button>
          <button
            class="tab-item false"
          >
            Publish
          </button>
        </div>
        <div
          class="tabs-content"
        >
          <div>
            <div
              class="d-flex justify-content-between"
            >
              <div
                class="d-flex flex-column"
              >
                <div
                  class="text-heading2"
                >
                  Share internally
                </div>
                <div
                  class="text-light"
                >
                  Users who have permissions will be able to use this link
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between tabs-inputs"
          >
            <div
              class="d-flex input-container"
            >
              <a
                class="shareUrl"
                href="http://localhost/1/1"
                rel="noreferrer"
                target="_blank"
              >
                http://localhost/1/1
              </a>
            </div>
            <button
              title="Copy internal link"
              type="button"
            >
              <i
                class="CompassIcon icon-content-copy CompassIcon"
              />
              <span>
                Copied!
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoard/shareBoard return shareBoard and click Regenerate token 1`] = `
<div>
  <div
    class="Dialog dialog-back ShareBoardDialog"
  >
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <button
            aria-label="Close dialog"
            title="Close dialog"
            type="button"
          >
            <i
              class="CompassIcon icon-close CloseIcon"
            />
          </button>
          <div
            class="cardToolbar"
          >
            <span
              class="text-heading5"
            >
              Share Board
            </span>
          </div>
        </div>
        <div
          class="share-input__container"
        >
          <div
            class="share-input"
          >
            <i
              class="CompassIcon icon-magnify MagnifyIcon"
            />
            <div
              class="userSearchInput css-2b097c-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1wmrr75-Control"
              >
                <div
                  class=" css-kpfmlq-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-1shkodo-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-5-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-byrije-loadingIndicator"
                  >
                    <span
                      class="css-1yvy2vo-LoadingDot"
                    />
                    <span
                      class="css-zoievk-LoadingDot"
                    />
                    <span
                      class="css-x748d8-LoadingDot"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="user-items"
        >
          <div
            class="user-item"
          >
            <div
              class="user-item__content"
            >
              <i
                class="CompassIcon icon-mattermost user-item__img"
              />
              <div
                class="ml-3"
              >
                <strong>
                  Everyone at Test Team Team
                </strong>
              </div>
            </div>
            <div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="user-item__button"
                >
                  None
                  <i
                    class="CompassIcon icon-chevron-down CompassIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tabs-container"
        >
          <button
            class="tab-item false"
          >
            Share
          </button>
          <button
            class="tab-item tab-item--active"
          >
            Publish
          </button>
        </div>
        <div
          class="tabs-content"
        >
          <div>
            <div
              class="d-flex justify-content-between"
            >
              <div
                class="d-flex flex-column"
              >
                <div
                  class="text-heading2"
                >
                  Publish to the web
                </div>
                <div
                  class="text-light"
                >
                  Publish and share a “read only” link with everyone on the web
                </div>
              </div>
              <div>
                <div
                  class="Switch override-main size--medium on"
                >
                  <div
                    class="octo-switch-inner"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between tabs-inputs"
          >
            <div
              class="d-flex input-container"
            >
              <a
                class="shareUrl"
                href="http://localhost/shared/1/1?r=anotherToken"
                rel="noreferrer"
                target="_blank"
              >
                http://localhost/shared/1/1?r=anotherToken
              </a>
              <div
                class="octo-tooltip tooltip-top"
                data-tooltip="Regenerate token"
              >
                <button
                  aria-label="Regenerate token"
                  title="Regenerate token"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-refresh undefined"
                  />
                </button>
              </div>
            </div>
            <button
              title="Copy public link"
              type="button"
            >
              <i
                class="CompassIcon icon-content-copy CompassIcon"
              />
              <span>
                Copy link
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoard/shareBoard return shareBoard, and click switch 1`] = `
<div>
  <div
    class="Dialog dialog-back ShareBoardDialog"
  >
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <button
            aria-label="Close dialog"
            title="Close dialog"
            type="button"
          >
            <i
              class="CompassIcon icon-close CloseIcon"
            />
          </button>
          <div
            class="cardToolbar"
          >
            <span
              class="text-heading5"
            >
              Share Board
            </span>
          </div>
        </div>
        <div
          class="share-input__container"
        >
          <div
            class="share-input"
          >
            <i
              class="CompassIcon icon-magnify MagnifyIcon"
            />
            <div
              class="userSearchInput css-2b097c-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1wmrr75-Control"
              >
                <div
                  class=" css-kpfmlq-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-1shkodo-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-6-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-byrije-loadingIndicator"
                  >
                    <span
                      class="css-1yvy2vo-LoadingDot"
                    />
                    <span
                      class="css-zoievk-LoadingDot"
                    />
                    <span
                      class="css-x748d8-LoadingDot"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="user-items"
        >
          <div
            class="user-item"
          >
            <div
              class="user-item__content"
            >
              <i
                class="CompassIcon icon-mattermost user-item__img"
              />
              <div
                class="ml-3"
              >
                <strong>
                  Everyone at Test Team Team
                </strong>
              </div>
            </div>
            <div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="user-item__button"
                >
                  None
                  <i
                    class="CompassIcon icon-chevron-down CompassIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tabs-container"
        >
          <button
            class="tab-item false"
          >
            Share
          </button>
          <button
            class="tab-item tab-item--active"
          >
            Publish
          </button>
        </div>
        <div
          class="tabs-content"
        >
          <div>
            <div
              class="d-flex justify-content-between"
            >
              <div
                class="d-flex flex-column"
              >
                <div
                  class="text-heading2"
                >
                  Publish to the web
                </div>
                <div
                  class="text-light"
                >
                  Publish and share a “read only” link with everyone on the web
                </div>
              </div>
              <div>
                <div
                  class="Switch override-main size--medium on"
                >
                  <div
                    class="octo-switch-inner"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between tabs-inputs"
          >
            <div
              class="d-flex input-container"
            >
              <a
                class="shareUrl"
                href="http://localhost/shared/1/1?r=oneToken"
                rel="noreferrer"
                target="_blank"
              >
                http://localhost/shared/1/1?r=oneToken
              </a>
              <div
                class="octo-tooltip tooltip-top"
                data-tooltip="Regenerate token"
              >
                <button
                  aria-label="Regenerate token"
                  title="Regenerate token"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-refresh undefined"
                  />
                </button>
              </div>
            </div>
            <button
              title="Copy public link"
              type="button"
            >
              <i
                class="CompassIcon icon-content-copy CompassIcon"
              />
              <span>
                Copy link
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoard/shareBoard return shareBoardComponent and click Switch without sharing 1`] = `
<div>
  <div
    class="Dialog dialog-back ShareBoardDialog"
  >
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <button
            aria-label="Close dialog"
            title="Close dialog"
            type="button"
          >
            <i
              class="CompassIcon icon-close CloseIcon"
            />
          </button>
          <div
            class="cardToolbar"
          >
            <span
              class="text-heading5"
            >
              Share Board
            </span>
          </div>
        </div>
        <div
          class="share-input__container"
        >
          <div
            class="share-input"
          >
            <i
              class="CompassIcon icon-magnify MagnifyIcon"
            />
            <div
              class="userSearchInput css-2b097c-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1wmrr75-Control"
              >
                <div
                  class=" css-kpfmlq-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-1shkodo-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-7-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-byrije-loadingIndicator"
                  >
                    <span
                      class="css-1yvy2vo-LoadingDot"
                    />
                    <span
                      class="css-zoievk-LoadingDot"
                    />
                    <span
                      class="css-x748d8-LoadingDot"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="user-items"
        >
          <div
            class="user-item"
          >
            <div
              class="user-item__content"
            >
              <i
                class="CompassIcon icon-mattermost user-item__img"
              />
              <div
                class="ml-3"
              >
                <strong>
                  Everyone at Test Team Team
                </strong>
              </div>
            </div>
            <div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="user-item__button"
                >
                  None
                  <i
                    class="CompassIcon icon-chevron-down CompassIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tabs-container"
        >
          <button
            class="tab-item false"
          >
            Share
          </button>
          <button
            class="tab-item tab-item--active"
          >
            Publish
          </button>
        </div>
        <div
          class="tabs-content"
        >
          <div>
            <div
              class="d-flex justify-content-between"
            >
              <div
                class="d-flex flex-column"
              >
                <div
                  class="text-heading2"
                >
                  Publish to the web
                </div>
                <div
                  class="text-light"
                >
                  Publish and share a “read only” link with everyone on the web
                </div>
              </div>
              <div>
                <div
                  class="Switch override-main size--medium on"
                >
                  <div
                    class="octo-switch-inner"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between tabs-inputs"
          >
            <div
              class="d-flex input-container"
            >
              <a
                class="shareUrl"
                href="http://localhost/shared/1/1?r=aToken"
                rel="noreferrer"
                target="_blank"
              >
                http://localhost/shared/1/1?r=aToken
              </a>
              <div
                class="octo-tooltip tooltip-top"
                data-tooltip="Regenerate token"
              >
                <button
                  aria-label="Regenerate token"
                  title="Regenerate token"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-refresh undefined"
                  />
                </button>
              </div>
            </div>
            <button
              title="Copy public link"
              type="button"
            >
              <i
                class="CompassIcon icon-content-copy CompassIcon"
              />
              <span>
                Copy link
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoard/shareBoard should match snapshot 1`] = `
<div>
  <div
    class="Dialog dialog-back ShareBoardDialog"
  >
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <button
            aria-label="Close dialog"
            title="Close dialog"
            type="button"
          >
            <i
              class="CompassIcon icon-close CloseIcon"
            />
          </button>
          <div
            class="cardToolbar"
          >
            <span
              class="text-heading5"
            >
              Share Board
            </span>
          </div>
        </div>
        <div
          class="share-input__container"
        >
          <div
            class="share-input"
          >
            <i
              class="CompassIcon icon-magnify MagnifyIcon"
            />
            <div
              class="userSearchInput css-2b097c-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1wmrr75-Control"
              >
                <div
                  class=" css-kpfmlq-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-1shkodo-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-2-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-byrije-loadingIndicator"
                  >
                    <span
                      class="css-1yvy2vo-LoadingDot"
                    />
                    <span
                      class="css-zoievk-LoadingDot"
                    />
                    <span
                      class="css-x748d8-LoadingDot"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="user-items"
        >
          <div
            class="user-item"
          >
            <div
              class="user-item__content"
            >
              <i
                class="CompassIcon icon-mattermost user-item__img"
              />
              <div
                class="ml-3"
              >
                <strong>
                  Everyone at Test Team Team
                </strong>
              </div>
            </div>
            <div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="user-item__button"
                >
                  None
                  <i
                    class="CompassIcon icon-chevron-down CompassIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tabs-container"
        >
          <button
            class="tab-item tab-item--active"
          >
            Share
          </button>
          <button
            class="tab-item false"
          >
            Publish
          </button>
        </div>
        <div
          class="tabs-content"
        >
          <div>
            <div
              class="d-flex justify-content-between"
            >
              <div
                class="d-flex flex-column"
              >
                <div
                  class="text-heading2"
                >
                  Share internally
                </div>
                <div
                  class="text-light"
                >
                  Users who have permissions will be able to use this link
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between tabs-inputs"
          >
            <div
              class="d-flex input-container"
            >
              <a
                class="shareUrl"
                href="http://localhost/1/1"
                rel="noreferrer"
                target="_blank"
              >
                http://localhost/1/1
              </a>
            </div>
            <button
              title="Copy internal link"
              type="button"
            >
              <i
                class="CompassIcon icon-content-copy CompassIcon"
              />
              <span>
                Copy link
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoard/shareBoard should match snapshot with sharing 1`] = `
<div>
  <div
    class="Dialog dialog-back ShareBoardDialog"
  >
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <button
            aria-label="Close dialog"
            title="Close dialog"
            type="button"
          >
            <i
              class="CompassIcon icon-close CloseIcon"
            />
          </button>
          <div
            class="cardToolbar"
          >
            <span
              class="text-heading5"
            >
              Share Board
            </span>
          </div>
        </div>
        <div
          class="share-input__container"
        >
          <div
            class="share-input"
          >
            <i
              class="CompassIcon icon-magnify MagnifyIcon"
            />
            <div
              class="userSearchInput css-2b097c-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1wmrr75-Control"
              >
                <div
                  class=" css-kpfmlq-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-1shkodo-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-3-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-byrije-loadingIndicator"
                  >
                    <span
                      class="css-1yvy2vo-LoadingDot"
                    />
                    <span
                      class="css-zoievk-LoadingDot"
                    />
                    <span
                      class="css-x748d8-LoadingDot"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="user-items"
        >
          <div
            class="user-item"
          >
            <div
              class="user-item__content"
            >
              <i
                class="CompassIcon icon-mattermost user-item__img"
              />
              <div
                class="ml-3"
              >
                <strong>
                  Everyone at Test Team Team
                </strong>
              </div>
            </div>
            <div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="user-item__button"
                >
                  None
                  <i
                    class="CompassIcon icon-chevron-down CompassIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tabs-container"
        >
          <button
            class="tab-item tab-item--active"
          >
            Share
          </button>
          <button
            class="tab-item false"
          >
            Publish
          </button>
        </div>
        <div
          class="tabs-content"
        >
          <div>
            <div
              class="d-flex justify-content-between"
            >
              <div
                class="d-flex flex-column"
              >
                <div
                  class="text-heading2"
                >
                  Share internally
                </div>
                <div
                  class="text-light"
                >
                  Users who have permissions will be able to use this link
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between tabs-inputs"
          >
            <div
              class="d-flex input-container"
            >
              <a
                class="shareUrl"
                href="http://localhost/1/1"
                rel="noreferrer"
                target="_blank"
              >
                http://localhost/1/1
              </a>
            </div>
            <button
              title="Copy internal link"
              type="button"
            >
              <i
                class="CompassIcon icon-content-copy CompassIcon"
              />
              <span>
                Copy link
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoard/shareBoard should match snapshot with sharing and subpath 1`] = `
<div>
  <div
    class="Dialog dialog-back ShareBoardDialog"
  >
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <button
            aria-label="Close dialog"
            title="Close dialog"
            type="button"
          >
            <i
              class="CompassIcon icon-close CloseIcon"
            />
          </button>
          <div
            class="cardToolbar"
          >
            <span
              class="text-heading5"
            >
              Share Board
            </span>
          </div>
        </div>
        <div
          class="share-input__container"
        >
          <div
            class="share-input"
          >
            <i
              class="CompassIcon icon-magnify MagnifyIcon"
            />
            <div
              class="userSearchInput css-2b097c-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1wmrr75-Control"
              >
                <div
                  class=" css-kpfmlq-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-1shkodo-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-9-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-byrije-loadingIndicator"
                  >
                    <span
                      class="css-1yvy2vo-LoadingDot"
                    />
                    <span
                      class="css-zoievk-LoadingDot"
                    />
                    <span
                      class="css-x748d8-LoadingDot"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="user-items"
        >
          <div
            class="user-item"
          >
            <div
              class="user-item__content"
            >
              <i
                class="CompassIcon icon-mattermost user-item__img"
              />
              <div
                class="ml-3"
              >
                <strong>
                  Everyone at Test Team Team
                </strong>
              </div>
            </div>
            <div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="user-item__button"
                >
                  None
                  <i
                    class="CompassIcon icon-chevron-down CompassIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tabs-container"
        >
          <button
            class="tab-item tab-item--active"
          >
            Share
          </button>
          <button
            class="tab-item false"
          >
            Publish
          </button>
        </div>
        <div
          class="tabs-content"
        >
          <div>
            <div
              class="d-flex justify-content-between"
            >
              <div
                class="d-flex flex-column"
              >
                <div
                  class="text-heading2"
                >
                  Share internally
                </div>
                <div
                  class="text-light"
                >
                  Users who have permissions will be able to use this link
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between tabs-inputs"
          >
            <div
              class="d-flex input-container"
            >
              <a
                class="shareUrl"
                href="http://localhost/test-subpath/plugins/boards1/1"
                rel="noreferrer"
                target="_blank"
              >
                http://localhost/test-subpath/plugins/boards1/1
              </a>
            </div>
            <button
              title="Copy internal link"
              type="button"
            >
              <i
                class="CompassIcon icon-content-copy CompassIcon"
              />
              <span>
                Copy link
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/shareBoard/shareBoard should match snapshot with sharing and without workspaceId and subpath 1`] = `
<div>
  <div
    class="Dialog dialog-back ShareBoardDialog"
  >
    <div
      class="wrapper"
    >
      <div
        class="dialog"
        role="dialog"
      >
        <div
          class="toolbar"
        >
          <button
            aria-label="Close dialog"
            title="Close dialog"
            type="button"
          >
            <i
              class="CompassIcon icon-close CloseIcon"
            />
          </button>
          <div
            class="cardToolbar"
          >
            <span
              class="text-heading5"
            >
              Share Board
            </span>
          </div>
        </div>
        <div
          class="share-input__container"
        >
          <div
            class="share-input"
          >
            <i
              class="CompassIcon icon-magnify MagnifyIcon"
            />
            <div
              class="userSearchInput css-2b097c-container"
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class=" css-1wmrr75-Control"
              >
                <div
                  class=" css-kpfmlq-ValueContainer"
                >
                  <div
                    class=" css-1wa3eu0-placeholder"
                  >
                    Select...
                  </div>
                  <div
                    class="css-1shkodo-Input"
                  >
                    <div
                      class=""
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-8-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class=" css-1hb7zxy-IndicatorsContainer"
                >
                  <div
                    aria-hidden="true"
                    class=" css-byrije-loadingIndicator"
                  >
                    <span
                      class="css-1yvy2vo-LoadingDot"
                    />
                    <span
                      class="css-zoievk-LoadingDot"
                    />
                    <span
                      class="css-x748d8-LoadingDot"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="user-items"
        >
          <div
            class="user-item"
          >
            <div
              class="user-item__content"
            >
              <i
                class="CompassIcon icon-mattermost user-item__img"
              />
              <div
                class="ml-3"
              >
                <strong>
                  Everyone at Test Team Team
                </strong>
              </div>
            </div>
            <div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="user-item__button"
                >
                  None
                  <i
                    class="CompassIcon icon-chevron-down CompassIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tabs-container"
        >
          <button
            class="tab-item tab-item--active"
          >
            Share
          </button>
          <button
            class="tab-item false"
          >
            Publish
          </button>
        </div>
        <div
          class="tabs-content"
        >
          <div>
            <div
              class="d-flex justify-content-between"
            >
              <div
                class="d-flex flex-column"
              >
                <div
                  class="text-heading2"
                >
                  Share internally
                </div>
                <div
                  class="text-light"
                >
                  Users who have permissions will be able to use this link
                </div>
              </div>
            </div>
          </div>
          <div
            class="d-flex justify-content-between tabs-inputs"
          >
            <div
              class="d-flex input-container"
            >
              <a
                class="shareUrl"
                href="http://localhost/test-subpath/plugins/boards1/1"
                rel="noreferrer"
                target="_blank"
              >
                http://localhost/test-subpath/plugins/boards1/1
              </a>
            </div>
            <button
              title="Copy internal link"
              type="button"
            >
              <i
                class="CompassIcon icon-content-copy CompassIcon"
              />
              <span>
                Copy link
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
